one more overflow fix

--- a/app/assets/stylesheets/blocks/b-user16.sass
+++ b/app/assets/stylesheets/blocks/b-user16.sass
@@ -7,6 +7,7 @@
   line-height: $line_height
   margin-left: 20px
   margin-right: 5px
+  position: relative // must be set to prevent absolute positioned & > img overflow
   white-space: nowrap
 
   &:hover
